# esxp1302

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  myflash.sh  platformio.ini  platformio_pre.py  run_me.sh  sdkconfig  sdkconfig.esp32dev  test.sh
doc/: changelog  esxp1302_upgrade_notes.md  notes_tips.md  todo_issue_list.md  user_guide.md
hardware_design/: README.md
hardware_design/case/: esxp1302_bottom_case.FCStd  esxp1302_bottom_case.stl  esxp1302_top_case.FCStd  esxp1302_top_case.dxf
hardware_design/motherboard/: ESP32-Interfacesv02b.SchDoc  ESP32_Interfaces_Board_v02b1.PcbDoc  ESP32_Interfacev02b.PrjPCB
hardware_design/sx1302/: SX1302CSS490GW1_e616v01a_CoreCell_V3_490MHz_CN_prod_folder.7z
main/: CMakeLists.txt  agc_fw_sx1250.var  agc_fw_sx1257.var  arb_fw.var  cal_fw.var  config.h  global_json.h  hello_world_main.c  http_server.c  http_server.h  ioe.c  ioe.h  jitqueue.c  jitqueue.h  led_indication.c  led_indication.h  lora_pkt_fwd.c  loragw_aux.c  loragw_aux.h  loragw_cal.c  loragw_gpio.c  loragw_gpio.h  loragw_gps.c  loragw_gps.h  loragw_hal.c  loragw_hal.h  loragw_i2c.c  loragw_i2c.h  loragw_reg.c  loragw_reg.h  loragw_spi.c  loragw_spi.h  loragw_stts751.c  loragw_stts751.h  loragw_sx1250.c  loragw_sx125x.c  loragw_sx1302.c  loragw_sx1302.h  loragw_sx1302_timestamp.c  loragw_version.h  (+11 more)
main/conf/: global_conf.cn490.json  global_conf.json.sx1250.CN490
main/libloragw/: agc_fw_sx1250.var  agc_fw_sx1257.var  arb_fw.var  cal_fw.var  config.h  loragw_ad5338r.c  loragw_ad5338r.h  loragw_aux.c  loragw_aux.h  loragw_cal.c  loragw_com.c  loragw_debug.c  loragw_debug.h  loragw_gpio.c  loragw_gps.c  loragw_gps.h  loragw_hal.c  loragw_hal.h  loragw_i2c.c  loragw_lbt.c  loragw_lbt.h  loragw_reg.c  loragw_reg.h  loragw_spi.c  loragw_spi.h  loragw_stts751.c  loragw_stts751.h  loragw_sx1250.c  loragw_sx1250.h  loragw_sx125x.c  loragw_sx125x.h  loragw_sx1261.c  loragw_sx1261.h  loragw_sx1302.c  loragw_sx1302.h  loragw_sx1302_rx.c  loragw_sx1302_rx.h  loragw_sx1302_timestamp.c  loragw_sx1302_timestamp.h  loragw_usb.c  (+13 more)
main/libloragw-test/: cli4test.c  test_libloragw.h  test_loragw_cal_sx125x.c  test_loragw_capture_ram.c  test_loragw_com_sx1250.c  test_loragw_com_sx1261.c  test_loragw_counter.c  test_loragw_gps.c  test_loragw_hal_rx.c  test_loragw_hal_tx.c  test_loragw_sx1261_rssi.c  test_loragw_toa.c
main/libtools/: base64.c  parson.c  tinymt32.c  tinymt32.h
main/packet_forwarder/: http_server.c  ioe.c  ioe.h  jitqueue.c  jitqueue.h  led_indication.c  led_indication.h  lora_pkt_fwd.c  loragw_version.h  web_config.c  web_config.h  webpage.html
main/packet_forwarder/global_conf.json/: global_conf.cn490.json  global_conf.json.sx1250.AS923  global_conf.json.sx1250.CN490  global_conf.us915.json
main/test/: original_spi_test.c  spi_main.c  test_loragw_cal.c  test_loragw_capture_ram.c  test_loragw_counter.c  test_loragw_gps.c  test_loragw_hal_rx.c  test_loragw_hal_tx.c  test_loragw_i2c.c  test_loragw_reg.txt  test_loragw_spi.c  test_loragw_spi.txt  test_loragw_spi_sx1250.c  test_network_connection.c
scripts/: dump_html.py  json_to_hex_array.py  udp_client.py  udp_srv.py  upgrader.py
