idf_component_register(SRCS "main.c"
                    "base64.c"
                    "ioe.c"
                    "http_server.c"
                    "jitqueue.c"
                    "loragw_aux.c"
                    "loragw_cal.c"
                    "loragw_debug.c"
                    "loragw_gpio.c"
                    "loragw_gps.c"
                    "loragw_hal.c"
                    "loragw_i2c.c"
                    "loragw_reg.c"
                    "loragw_spi.c"
                    "loragw_stts751.c"
                    "loragw_sx1250.c"
                    "loragw_sx125x.c"
                    "loragw_sx1302.c"
                    "loragw_sx1302_rx.c"
                    "loragw_sx1302_timestamp.c"
                    "led_indication.c"
                    "parson.c"
                    "tinymt32.c"
                    "web_config.c"
		    "libloragw-test/test_loragw_toa.c"
                    INCLUDE_DIRS "." "libloragw-test")
