idf_component_register(SRCS "main.c"
                    "libtools/base64.c"
                    "libtools/parson.c"
                    "libtools/tinymt32.c"
                    "libloragw/loragw_ad5338r.c"
                    "libloragw/loragw_aux.c"
                    "libloragw/loragw_cal.c"
                    "libloragw/loragw_com.c"
                    "libloragw/loragw_debug.c"
                    "libloragw/loragw_gpio.c"
                    "libloragw/loragw_gps.c"
                    "libloragw/loragw_hal.c"
                    "libloragw/loragw_i2c.c"
                    "libloragw/loragw_lbt.c"
                    "libloragw/loragw_reg.c"
                    "libloragw/loragw_spi.c"
                    "libloragw/loragw_stts751.c"
                    "libloragw/loragw_sx1250.c"
                    "libloragw/loragw_sx125x.c"
                    "libloragw/loragw_sx1261.c"
                    "libloragw/loragw_sx1302.c"
                    "libloragw/loragw_sx1302_rx.c"
                    "libloragw/loragw_sx1302_timestamp.c"
                    "libloragw/loragw_usb.c"
                    "libloragw/sx1250_com.c"
                    "libloragw/sx1250_spi.c"
                    "libloragw/sx1250_usb.c"
                    "libloragw/sx125x_com.c"
                    "libloragw/sx125x_spi.c"
                    "libloragw/sx1261_com.c"
                    "libloragw/sx1261_spi.c"
                    "libloragw/sx1261_usb.c"
                    "ioe.c"
                    "http_server.c"
                    "jitqueue.c"
                    "led_indication.c"
                    "web_config.c"
                    "libloragw-test/test_loragw_toa.c"
                    "libloragw-test/test_loragw_hal_tx.c"
                    "libloragw-test/test_loragw_hal_rx.c"
                    INCLUDE_DIRS "libloragw"
                    INCLUDE_DIRS "libtools"
                    INCLUDE_DIRS "libloragw-test"
                    INCLUDE_DIRS ""
           )
